--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
   "name": "react-blog-github",
-  "homepage": "https://saadpasta.github.io/react-blog-github",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-hooks": "^4.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@uiw/react-md-editor": "^2.1.11",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "^3.9.2",
     "apollo-boost": "^0.4.7",
-    "gh-pages": "^2.2.0",
-    "graphql": "^14.5.8",
-    "markdown-to-jsx": "^6.10.3",
+    "gh-pages": "^3.2.3",
+    "graphql": "^16.2.0",
+    "markdown-to-jsx": "^7.1.5",
     "medium.css": "^1.0.2",
     "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-ga": "^2.7.0",
-    "react-helmet": "^5.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
+    "react-helmet": "^6.1.0",
     "react-reactions": "github:randomdipesh/react-reactions",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "react-syntax-highlighter": "^12.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "react-syntax-highlighter": "^15.4.5",
     "reading-time": "^1.2.0",
-    "styled-components": "^5.0.1"
+    "stream": "^0.0.2",
+    "streamjs": "^1.6.4",
+    "styled-components": "^5.0.1",
+    "util": "^0.12.4"
   },
   "scripts": {
     "predeploy": "npm run build",
